--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-just a trick to hide some process on win
+just a trick to hide some process on win with a minifilter driver (Altitude 170000 and flags 0)
